--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio de Projetos</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Link para o tema Morph do Bootstrap 5 -->
+    <link href="https://bootswatch.com/5/morph/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <style>
   body {
     font-family: 'Roboto', sans-serif;
@@ -48,6 +50,7 @@ h2 {
 }
 
 </style>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
@@ -162,36 +165,14 @@ h2 {
 
     <footer class="text-center py-4" id="contact">
         <p>&copy; 2024 José Antonio da Silva Filho</p>
-        <p> Telefone para contato profissional: (11) 9 8991-9526</p>
+        <p>Telefone para contato profissional: (11) 9 8991-9526</p>
         <p>Siga-me nas redes sociais: 
             <a href="https://www.linkedin.com/in/jos%C3%A9-silva-593870229/" class="text-dark"><i class="fab fa-linkedin"></i></a>
         </p>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script> $(document).ready(function() {
-      const username = 'seu-usuario';
-      const repoCount = 6; // Número de repositórios a exibir
-  
-      $.getJSON(`https://api.github.com/users/${username}/repos?sort=created&per_page=${repoCount}`, function(repos) {
-          repos.forEach(repo => {
-              let projectCard = `
-                  <div class="col-md-4 mb-4">
-                      <div class="card h-100">
-                          <div class="card-body">
-                              <h5 class="card-title">${repo.name}</h5>
-                              <p class="card-text">${repo.description}</p>
-                              <a href="${repo.html_url}" class="btn btn-primary" target="_blank">Ver no GitHub</a>
-                          </div>
-                      </div>
-                  </div>
-              `;
-              $('.row').append(projectCard);
-          });
-      });
-  });
-  </script>>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-beta2/js/bootstrap.min.js"></script>
 </body>
 </html>
