--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@ footer a:hover{
         <a href="https://github.com/Junior2099/Placas_Casa_Carne" target="_blank"><div class="items">
             <div class="item">
                 <div class="inner">
-                    <img src="/placa.png">
+                    <img src="./placa.png">
                     <a href="#">Meat house plates</a>
                     <p>a website created to make signs, with prices and names for printing</p>
                 </div>
@@ -668,14 +668,14 @@ footer a:hover{
 
             <a href="https://github.com/Junior2099/Organizador-de-Fotos" target="_blank"> <div class="item">
                 <div class="inner">
-                    <img src="/organiza.png">
+                    <img src="./organiza.png">
                     <a href="#">Printable organizer</a>
                     <p>A website to organize and print photos of different sizes</p>
                 </div></a>
             </div>
            <a href="https://github.com/Junior2099/Fotos-Polaroid" target="_blank"><div class="item">
                 <div class="inner">
-                    <img src="/polaroid.png">
+                    <img src="./polaroid.png">
                     <a href="#">Turn photos into polaroid</a>
                     <p>A website to transform photos into polaroid size</p>
                 </div>
